--- a/styles/footer.css
+++ b/styles/footer.css
@@ -13,12 +13,10 @@
 .directory-container{
     height:100%;
     width: 25%;
-
 }
     .directory-img{
         width: 200px;
-        padding:0 20px 0;
-
+        padding-right: 20px;
     }
     .directory-info{
         color:white;
@@ -35,36 +33,26 @@
         height: 30%;
         color: white;
         text-align: center;
-        margin:0;
-        
     }
     .about-us-info{
         height: 70%;
         color: white;
         padding: 15px;
         color:#737373;
-
     }
-
 .colaboradores-container{
     height: 100%;
     width: 25%;
 }
-
     .colaboradores-title{
         height: 30%;
         color: white;
         text-align: center;
-        margin:0;
-
     }
     .link-container{
         height: 70%;
         padding: 15px;
         text-align: center;
-        display: grid;
-        
-    
     }
         .link-web-page{
             color:#737373;
@@ -72,7 +60,7 @@
             text-decoration: none;
         }
             .link-web-page:hover{
-                color:rgba(106, 59, 89, 1);
+                color:rgba(106, 59, 89);
                 text-decoration:none;
             }
 .follow-us-container{
@@ -83,7 +71,6 @@
         height: 30%;
         color: white;
         text-align: center;
-        margin:0;
     }
     .social-container{
         text-align: center;
