--- a/styles/footer.css
+++ b/styles/footer.css
@@ -16,7 +16,8 @@
 }
     .directory-img{
         width: 200px;
-        padding-right: 20px;
+        padding-left: 20px;
+        height: 70px;
     }
     .directory-info{
         color:white;
@@ -53,6 +54,8 @@
         height: 70%;
         padding: 15px;
         text-align: center;
+        margin: auto;
+        display: block;
     }
         .link-web-page{
             color:#737373;
