--- a/styles/user-create-form.css
+++ b/styles/user-create-form.css
@@ -1,5 +1,11 @@
+.container-user-form{
+        background:url(../imgs/mom.jpg);
+        padding: 4.95%;
+        background-size: 100%;
+        
+    }
     .create-user-form{
-        background-color: rgba(106, 59, 89, 0.9);
+        background-color: rgba(0, 0, 0, 0.5);
         color: white;
         text-align: center;
         width: 480px;
